2008-04-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_realize):
	Added the variables we should use to adjust spot[2] for dark themes.
	Still no algorithm.

2008-04-21  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	gtk-engines 2.15.0 release.

2008-04-13  Thomas Wood  <thos@gnome.org>

	* engines/redmond/src/redmond_gtk2_drawing.c:
	(redmond_draw_shadow):
	* themes/Redmond/gtk-2.0/gtkrc:

	Fix menu borders and padding

2008-04-13  Thomas Wood  <thos@gnome.org>

	* engines/redmond/src/redmond_gtk2_drawing.c:
	(redmond_draw_shadow), (redmond_draw_box): Don't draw a shadow on
	scrollbars now that we don't provide them with any padding.

2008-04-11  Thomas Wood  <thos@gnome.org>

	* themes/Redmond/gtk-2.0/gtkrc: Use new scrollbars-within-bevel
	property for GtkScrolledWindow

2008-04-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* Makefile.am:
	Do not install the translations. Patch from Werner Pantke.

2008-04-09  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c: (draw_slider):
	The stepper button check was only missing in industrial.

2008-04-09  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/support.c:
	(clearlooks_scrollbar_get_junction):
	* engines/industrial/src/industrial_style.c: (draw_slider):
	* engines/mist/src/mist-style.c: (mist_style_draw_box):
	Fix part 1 of bug #526890 in all affected engines. (Inverted
	scrollbars should work fine now, stepper buttons are still ignored.)

2008-04-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.14.1 release.

2008-04-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/torture:
	Fix running the tests when building out of tree.

2008-04-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_focus):