@@ -1,3 +1,8 @@
+2008-05-01  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/clearlooks/src/clearlooks_draw*.c:
+	Start to clean up the 0.5 translation mess.
+
 2008-04-29  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* engines/clearlooks/src/clearlooks_style.c:
